Revision history for Perl extension Math::SimpleHisto::XS.

1.27  Thu Apr  5 14:00:00 2012
  - add_histogram floating point comparison workaround.

1.26  Wed Mar 14 21:00:00 2012
  - Fix Math::SimpleHisto::XS::Named documentation to refer to the right
    namespace.

1.25  Fri Nov 18 13:34:00 2011
  - Do not check 'nfills == 0' in various aggregate functions
    since it might have been dropped somewhere and the histogram might
    still be valid.

1.24  Wed Nov 16 18:22:00 2011
  - add_histogram($to_add) method that adds the contents of another
    histogram to the invocant if the histogram have the same binning.

1.23  Wed Oct 19 13:10:00 2011
  - No functional changes

1.22  Wed Sep 28 21:55:00 2011
  - Fix t/80named.t if there's no JSON implementation.

1.21  Wed Sep 28 21:55:00 2011
  - to_soot() method will create a SOOT TH1D object from the
    Math::SimpleHisto::XS histogram IF the optional SOOT library
    is available.

1.20  Tue Sep 27 17:43:00 2011
  - Include Math::SimpleHisto::XS::Named implementing histograms with
    named bins.
  - Implements a "fill_by_bin" method that fills into a given bin
    number instead of locating the target bin by coordinates.
  - Lots of internals refactoring.

1.13  Wed Sep 21 15:47:00 2011
  - Fix dependency on ExtUtils::ParseXS.

1.12  Fri Jun 10 21:29:00 2011
  - Fix segfaulting bug in median/mad calculation.
  - Fix t/50mean.t

1.11  Fri Jun 10 20:17:00 2011
  - Minor test bug fix release, no functional changes.

1.10  Thu Jun  9 13:07:00 2011
  * This release contains incompatible changes to previous releases *
  - INCOMPATBLE CHANGE: The rand() method now works on the
    histogram itself instead of its cumulation. This works by
    lazily constructing and caching a cumulative histogram
    internally and greatly reduces the chance for user errors:
    Before:
      my $ch = $hist->cumulative(1);
      push @rand_like_hist, $ch->rand for 1..100000;
    After:
      push @rand, $hist->rand for 1..100000;